Actualización del codigo

--- a/Trabajo/index.html
+++ b/Trabajo/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -32,7 +33,7 @@
 
   <!-- Carrusel -->
   <section id="carrusel" class="container my-4">
-    <div id="carrusel-principal" class="carousel slide" data-bs-ride="carousel">
+    <div id="carrusel-principal" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carrusel-principal" data-bs-slide-to="0" class="active"></button>
         <button type="button" data-bs-target="#carrusel-principal" data-bs-slide-to="1"></button>
