--- a/Trabajo/index.html
+++ b/Trabajo/index.html
@@ -78,10 +78,12 @@
               <li><strong>Correo:</strong> andres.vargasf07@gmail.com</li>
               <li><strong>Correo:</strong> miyava1995@gmail.com</li>
               <li><strong>Correo:</strong> estebanidarraga3@gmail.com</li>
+              <li><strong>Correo:</strong> joseboma07@gmail.com</li>
             </ul>
 
             <div class="notita mt-4">
-              <small>Horario de atención: Lunes a Viernes, 9:00–18:00.</small>
+              <small>Horario de atención: Lunes a Viernes, 9:00–18:00</small>
+              <small>, Sabado 10:00–14:00.</small>
             </div>
           </div>
         </div>
