--- a/Trabajo/index.html
+++ b/Trabajo/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sitio sencillo con Bootstrap</title>
+  <title>Ticket.Co</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -17,14 +17,14 @@
   <!-- Barra de navegación -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="#">Mi sitio</a>
+      <a class="navbar-brand" href="#">Ticket.co</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#barra-navegacion">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="barra-navegacion" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="#carrusel">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="#cartas">Cartas</a></li>
+          <li class="nav-item"><a class="nav-link" href="#cartas">Eventos</a></li>
           <li class="nav-item"><a class="nav-link" href="#contacto">Contáctanos</a></li>
         </ul>
       </div>
@@ -61,7 +61,7 @@
 
   <!-- Cartas (el JS generará N tarjetas dentro de #container) -->
   <section id="cartas" class="container my-5">
-    <h2 class="mb-3">Cartas</h2>
+    <h2 class="mb-3">Eventos</h2>
     <div id="container" class="row"></div>
   </section>
 
