--- a/Trabajo/index.html
+++ b/Trabajo/index.html
@@ -41,13 +41,13 @@
       </div>
       <div class="carousel-inner borde-suave sombra-suave">
         <div class="carousel-item active">
-          <img src="https://picsum.photos/1200/420?random=1" class="d-block w-100 img-carrusel" alt="Imagen 1">
+          <img src="https://picsum.photos/1200/420?random=1" class="d-block img-carrusel" alt="Imagen 1">
         </div>
         <div class="carousel-item">
-          <img src="https://picsum.photos/1200/420?random=2" class="d-block w-100 img-carrusel" alt="Imagen 2">
+          <img src="https://picsum.photos/1200/420?random=2" class="d-block  img-carrusel" alt="Imagen 2">
         </div>
         <div class="carousel-item">
-          <img src="https://picsum.photos/1200/420?random=3" class="d-block w-100 img-carrusel" alt="Imagen 3">
+          <img src="https://picsum.photos/1200/420?random=3" class="d-block  img-carrusel" alt="Imagen 3">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carrusel-principal" data-bs-slide="prev">
