--- a/Trabajo/index.html
+++ b/Trabajo/index.html
@@ -14,8 +14,11 @@
 </head>
 <body>
 
-  <!-- Barra de navegación -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+ <video id="video-fondo" autoplay muted loop playsinline poster="imagenes/fondo.jpg">
+  <source src="/Grupo1_Front/Trabajo/Imagen/blessd.mp4" type="video/mp4">
+</video>
+
+  <nav class="navbar navbar-expand-lg navbar-dark navbar-blur sticky-top">
     <div class="container">
       <a class="navbar-brand" href="#">Ticket.co</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#barra-navegacion">
@@ -65,43 +68,36 @@
     <div id="container" class="row"></div>
   </section>
 
-  <!-- Contáctanos (solo información) -->
-  <section id="contacto" class="seccion-contacto py-5">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-8">
-          <div class="tarjeta-info p-4 p-md-5 text-center">
-            <h2 class="mb-2">Contáctanos</h2>
-            <p class="texto-suave mb-4">Información de contacto del equipo.</p>
 
-            <ul class="lista-contacto">
-              <li><strong>Correo:</strong> andres.vargasf07@gmail.com</li>
-              <li><strong>Correo:</strong> miyava1995@gmail.com</li>
-              <li><strong>Correo:</strong> estebanidarraga3@gmail.com</li>
-              <li><strong>Correo:</strong> joseboma07@gmail.com</li>
-            </ul>
+ <section id="contacto" class="seccion-contacto py-5">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-8">
+        <div class="tarjeta-info vidriada p-4 p-md-5 text-center">
+          <h2 class="mb-3">Contáctanos</h2>
+          <p class="texto-suave mb-4">Conoce más del equipo y el proyecto.</p>
 
-            <div class="notita mt-4">
-              <small>Horario de atención: Lunes a Viernes, 9:00–18:00</small>
-              <small>, Sabado 10:00–14:00.</small>
-            </div>
-          </div>
+         
+          <a href="/Grupo1_Front/Trabajo/CONTACTO/equipo.html" class="text-decoration-none">
+            <button type="button" class="btn btn-primary btn-lg">
+              Sobre nosotros
+            </button>
+          </a>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Pie -->
+
   <footer class="py-3 border-top">
     <div class="container text-center text-muted small">
     El mejor sitio del universo
     </div>
   </footer>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Tu JS: se ejecuta al final para asegurar que #container ya existe -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
