--- a/Trabajo/index.html
+++ b/Trabajo/index.html
@@ -14,7 +14,7 @@
 <body>
 
  <video id="video-fondo" autoplay muted loop playsinline poster="imagenes/fondo.jpg">
-  <source src="/Grupo1_Front/Trabajo/Imagen/blessd.mp4" type="video/mp4">
+  <source src="../Trabajo/Imagen/blessd.mp4" type="video/mp4">
 </video>
 
   <nav class="navbar navbar-expand-lg navbar-dark navbar-blur sticky-top">
