Subir mis cambios

--- a/Trabajo/index.html
+++ b/Trabajo/index.html
@@ -77,7 +77,7 @@
           <p class="texto-suave mb-4">Conoce más del equipo y el proyecto.</p>
 
          
-          <a href="/Grupo1_Front/Trabajo/CONTACTO/equipo.html" class="text-decoration-none">
+          <a href="../Trabajo/CONTACTO/equipo.html" class="text-decoration-none">
             <button type="button" class="btn btn-primary btn-lg">
               Sobre nosotros
             </button>
