--- a/Trabajo/CONTACTO/equipo.html
+++ b/Trabajo/CONTACTO/equipo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestro Equipo</title>
-    <link rel="stylesheet" href="/Grupo1_Front/Trabajo/CONTACTO/styles.css">
+    <link rel="stylesheet" href="../CONTACTO/styles.css">
 </head>
 <body>
     <button class="back-btn" onclick="goBack()">← Volver al Inicio</button>
